--- a/_toc.yml
+++ b/_toc.yml
@@ -1,6 +1,4 @@
-- chapter: Graph Networks
-  sections:
-          - file: NLNN_Clip_Classifier
-          - file: NLNN_CC_Randomization
-          - file: NLNN_Trajectory_simulation
-
+file: NLNN_Clip_Classifier
+sections:
+- file: NLNN_CC_Randomization
+- file: NLNN_Trajectory_simulation
