Fix website index

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,4 +1,5 @@
-file: NLNN_Clip_Classifier
+file: intro
 sections:
+- file: NLNN_Clip_Classifier
 - file: NLNN_CC_Randomization
 - file: NLNN_Trajectory_simulation
