--- a/toc.yml
+++ b/toc.yml
@@ -1,5 +1,6 @@
-file: NLNN_intro
-chapters: 
+file: intro
+chapters:
+- file: NLNN_intro
 - file: NLNN_Clip_Classifier
 - file: NLNN_CC_Randomization
 - file: NLNN_Trajectory_simulation
