--- a/_toc.yml
+++ b/_toc.yml
@@ -1,5 +1,5 @@
-file: NLNN_intro
+- file: NLNN_intro
 chapters: 
-- file: NLNN_Clip_Classifier
-- file: NLNN_CC_Randomization
-- file: NLNN_Trajectory_simulation
+  - file: NLNN_Clip_Classifier
+  - file: NLNN_CC_Randomization
+  - file: NLNN_Trajectory_simulation
