--- a/_toc.yml
+++ b/_toc.yml
@@ -1,5 +1,7 @@
 - file: NLNN_intro
-chapters: 
+
+- chapter: Experiments with NLNN
+  sections:
   - file: NLNN_Clip_Classifier
   - file: NLNN_CC_Randomization
   - file: NLNN_Trajectory_simulation
